IDE-1386 create initial GWT module, remove java.io.* imports